# CLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  announcements.txt  build.bat  build.rs  build.sh  log.txt  nextlaunch.json  not-build.rs  num.txt  out.sxl  package-lock.json  prerelease.sh  preview.txt  ref.json  sbar.bash  weather.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-lang-zip  build-lang-zip.yml  ci.yml  rust.yml
documents/: README_DE.md  README_EN.txt  README_FR.md  README_FR.txt
installer_files/: manifest.json  nextlaunch.json
installer_files/calc_hash/: Cargo.toml
installer_files/calc_hash/src/: main.rs
languages/: de_DE.json  en_GB.json  fr_FR.json
node-utils/: airports.csv  links.txt  list.js  locations.json  package.json  pad_map.json
old/: Cargo.toml  build.sh
old/src/: agencies.rs  braille.rs  display.rs  main.rs  structure.rs
src/: agencies.rs  constants.rs  display.rs  downloads.rs  installer.rs  languages.rs  main.rs  management.rs  minimal.rs  runtime.rs  settings.rs  sixel.rs  structure.rs  utilities.rs
src/installer/: mod.rs
src/languages/: de_de.rs  en_gb.rs
src/management/: data.rs  flags.rs  rendering.rs  runtime.rs  threads.rs
src/management/data/: launches.rs  telemetry.rs
src/management/data/launches/: implementors.rs  structures.rs
src/management/data/telemetry/: structures.rs
src/management/rendering/: structures.rs
src/management/threads/: launch_mgr.rs  launchmgr.rs  render_mgr.rs
src/management/threads/render_mgr/views/: regular.rs
src/runtime/: data.rs  flags.rs  json_subsystem.rs  keybindings.rs  renderer.rs  state.rs
src/runtime/data/: launches.rs
src/runtime/data/launches/: structures.rs
src/runtime/renderer/: settings.rs  views.rs
src/runtime/renderer/views/: deep_dive.rs  default.rs
src/runtime/renderer/views/deep_dive/: dict.rs
src/runtime/renderer/views/deep_dive/dict/: space_x.rs
src/runtime/renderer/views/deep_dive/dict/space_x/: falcon_9.rs
src/runtime/renderer/views/deep_dive/dict/space_x/falcon_9/: block_5.rs
src/runtime/renderer/views/default/: widgets.rs
src/runtime/renderer/views/default/widgets/: countdown.rs  launch_info.rs  launch_updates.rs  logo.rs  lsp_stats.rs  news_articles.rs  system_logs.rs
src/settings/: defaults.rs
src/utilities/: digit_map.rs  map_lat_long.rs  map_weather.rs
