[package]
name = "nextlaunch-installer"
version = "2.0.0"
description = "Watch a countdown until the next rocket launch, live in your terminal!"
authors = ["AltriusRS <tom.b.2k2@gmail.com>"]
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

repository = "https://github.com/AltriusRS/NextLaunch"
keywords = [
    "space",
    "cli",
    "terminal",
    "spacex",
    "countdown"
]
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["serde_json", "json", "blocking"] }
dirs-2 = "3.0.1"
zip = "0.5.11"
toml = "0.5.8"
iced = "0.2.0"