[package]
name = "nextlaunch"
version = "2.0.0"
description = "Watch a countdown until the next rocket launch, live in your terminal!"
authors = ["AltriusRS <tom.b.2k2@gmail.com>"]
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
# build = "build.rs"

repository = "https://github.com/AltriusRS/NextLaunch"
keywords = [
    "space",
    "cli",
    "terminal",
    "spacex",
    "countdown"
]
license = "MIT"
readme = "README.md"

[dependencies]
locale_config = "*"
tokio = { version = "1.1.0", features = ["full"] }
reqwest = { version = "0.11.0", features = ["serde_json", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
bincode = "1.3.1"
crossterm = { version = "0.18", features = ["event-stream"] }
tui = { version = "0.14.0", default-features = false, features = ["crossterm"] }
term_size = "0.3.2"
webbrowser = { git = "https://github.com/codota/webbrowser-rs", branch = "feature/add-suppress-output-flag-with-docs" }
dirs-2 = "3.0.1"

[target.aarch64-linux-android.dependencies]
reqwest = { version = "0.11.0", default-features = false, features = ["serde_json", "json", "rustls-tls"] }

[target.aarch64-linux-android.build-dependencies]
reqwest = { version = "0.11.0", default-features = false, features = ["serde_json", "json", "rustls-tls"] }

#[build-dependencies]
#serde = { version = "1.0.123", features = ["derive"] }
#reqwest = { version = "0.11.0", features = ["serde_json", "json", "blocking"] }
#dirs-2 = "3.0.1"
#zip = "0.5.11"
